sumo/tests/traci/PositionConversion/InvalidPosOnRoad/options.traci
sumo.exe --no-step-log --net-file net.net.xml --route-files routes.rou.xml --penetration 1.0 --remote-port 8834 --netstate-dump netstate_dump.xml TraCITestClient.exe -def posconversion_invalidposonroad.prog -p 8834 -h localhost -o testclient_out.txt
